refactor: remove api v1
